<resources>
    <string name="app_name" translatable="false">Viola</string>
    <string name="app_name_display" translatable="false">Viola Browser</string>
    <string name="clear">Clear</string>
    <string name="do_not_show_again">Do not show again</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="path">Path</string>
    <string name="path_not_found">Path not found</string>
    <string name="download_location">Download location</string>
    <string name="reset">Reset</string>
    <string name="search_engine">Search engine</string>
    <string name="homepage">Homepage</string>
    <string name="search_suggestions_title">Search Suggestions</string>
    <string name="toast_no_webview">WebView is required but not installed.</string>
    <string name="toast_cleared">Cleared successfully!</string>
    <string name="toast_copied_clipboard">Copied to clipboard!</string>
    <string name="save_successful">Saved successfully!</string>
    <string name="dialog_continue_prompt_message">Are you sure you want to continue?</string>
    <string name="menu_copy_link">Copy link</string>
    <string name="start_page">Start Page</string>
    <string name="toast_no_app_to_handle">No application can handle this action.</string>
    <string name="dialog_js_title">%s says</string>
    <string name="dialog_js_leave_page_title">%s says, do you want to leave this page?</string>
    <string name="dialog_page_unresponsive_title">Page Unresponsive</string>
    <string name="dialog_page_unresponsive_message">You can wait for it to become responsive or terminate this tab.</string>
    <string name="dialog_page_unresponsive_wait">Wait</string>
    <string name="dialog_page_unresponsive_terminate">Terminate</string>
    <string name="ssl_certificate_error_dialog_title">SSL Certificate Error</string>
    <string name="ssl_certificate_error_dialog_message">%s Do you want to continue anyway?</string>
    <string name="ssl_certificate_date_invalid">The date of the certificate is invalid.</string>
    <string name="ssl_certificate_invalid">A generic SSL error occurred.</string>
    <string name="ssl_certificate_expired">The certificate has expired.</string>
    <string name="ssl_certificate_idmismatch">The certificate hostname mismatch.</string>
    <string name="ssl_certificate_notyetvalid">The certificate is not yet valid.</string>
    <string name="ssl_certificate_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_certificate_unknown">An unknown SSL error occurred.</string>
    <string name="dialog_ssl_failed_handshake_title">Failed to perform SSL handshake. Page load may still be possible by downgrading to HTTP.</string>
    <string name="dialog_insecure_connection_title">Insecure connection</string>
    <string name="dialog_insecure_connection_message">You are seeing this warning because the site %s does not support HTTPS.</string>
    <string name="dialog_insecure_connection_go_back">Go back</string>
    <string name="dialog_insecure_connection_continue_to_site">Continue to site</string>
    <string name="snackbar_open_external_message">External link detected.</string>
    <string name="snackbar_open_external_fallback_message">No application can handle this external link. Open fallback?</string>
    <string name="snackbar_open_external_action">Open</string>
    <string name="dialog_files_description">This page is stored on your device.</string>
    <string name="address_bar_hint">Search or type web address…</string>
    <string name="dialog_js_cewarn_title">JavaScript execution warning</string>
    <string name="dialog_js_cewarn_message">Someone is attempting to execute unknown JavaScript code in this browser tab. If this was not you, please cancel execution.\n\nDo you want to continue execution?</string>
    <string name="hit_test_copy_link_text">Copy link text</string>
    <string name="hit_test_download_link">Download link</string>
    <string name="hit_test_download_image">Download image</string>
    <string name="hit_test_copy_image_link">Copy image link</string>
    <string name="hit_test_search_image">Search for similar images</string>
    <string name="hit_test_open_in_new_tab">Open in new tab</string>
    <string name="hit_test_share_link">Share link</string>
    <string name="ssl_info_dialog_issued_to">Issued To:</string>
    <string name="ssl_info_dialog_issued_by">Issued By:</string>
    <string name="ssl_info_dialog_validity_period">Validity Period:</string>
    <string name="ssl_info_dialog_common_name">Common Name (CN)</string>
    <string name="ssl_info_dialog_organization">Organization (O)</string>
    <string name="ssl_info_dialog_organization_unit">Organizational Unit (OU)</string>
    <string name="ssl_info_dialog_issued_on">Issued On</string>
    <string name="ssl_info_dialog_expires_on">Expires On</string>
    <string name="ssl_info_dialog_content_nocert">This website does not appear to supply a SSL certificate. Do not entertain requests for sensitive information (e.g. passwords or credit cards).</string>
    <string name="dialog_auth_title">Authentication required</string>
    <string name="dialog_auth_message">%s requires a username and password.</string>
    <string name="dialog_auth_username">Username</string>
    <string name="dialog_auth_password">Password</string>
    <string name="dialog_share_title">Share URL using</string>
    <string name="toolbar_expandable_new_tab">New Tab</string>
    <string name="toolbar_expandable_favorites">Favorites</string>
    <string name="toolbar_expandable_history">History</string>
    <string name="toolbar_expandable_viewport">Viewing mode</string>
    <string name="toolbar_expandable_find">Find in page</string>
    <string name="toolbar_expandable_favorites_add">Add to favorites</string>
    <string name="toolbar_expandable_translate">Translate</string>
    <string name="toolbar_expandable_downloads">Downloads</string>
    <string name="toolbar_expandable_fullscreen">Enter full screen</string>
    <string name="toolbar_expandable_app_shortcut">Create shortcut</string>
    <string name="toolbar_expandable_settings">Settings</string>
    <string name="toolbar_expandable_view_page_source">View Page Source</string>
    <string name="toolbar_expandable_print">Print</string>
    <string name="toolbar_expandable_close">Close app</string>
    <string name="pref_check_for_updates_title">Check for Updates</string>
    <string name="pref_check_for_updates_summary">Check for new update and allow you to download it if one is available.</string>
    <string name="pref_about_title">About</string>
    <string name="pref_search_category_engine_title">Default search engine</string>
    <string name="pref_search_category_engine_summary">This is your default search engine in the address bar. You can switch it at any time.</string>
    <string name="pref_use_web_homepage_title">Use web-based homepage</string>
    <string name="pref_use_web_homepage_summary">Open a webpage instead of start page as homepage.</string>
    <string name="pref_search_category_suggestions_summary">Choose how suggestions from search engines appear.</string>
    <string name="pref_search_suggestions_provider_title">Suggestions provider</string>
    <string name="pref_ps_category_ad_blocking_title">Ad blocking</string>
    <string name="pref_ps_category_ad_blocking_summary">Stop annoying ads from distracting you.</string>
    <string name="pref_ad_blocker_source_title">Ad Blocklist Source</string>
    <string name="pref_ad_blocker_download_hosts_title">Download Ad Blocklist</string>
    <string name="pref_ps_category_privacy">Privacy</string>
    <string name="pref_do_not_track_title">Do Not Track</string>
    <string name="pref_do_not_track_summary">Send a Do Not Track request to websites you visit.</string>
    <string name="pref_send_sec_gpc_title">Global Privacy Control</string>
    <string name="pref_send_sec_gpc_summary">Enable to consent to the selling or sharing of your personal information on websites you visit with third parties.</string>
    <string name="pref_enable_history_title">Use history storage</string>
    <string name="pref_enable_history_summary">Preserve the history of webpages visited.</string>
    <string name="pref_clear_browsing_data">Clear browsing data</string>
    <string name="pref_reset_to_default_title">Reset to default</string>
    <string name="pref_reset_to_default_summary">Clear all browser data.</string>
    <string name="pref_ps_category_security">Security</string>
    <string name="pref_enforce_https_title">Always use secure connections</string>
    <string name="pref_enforce_https_summary">Use HTTPS whenever possible and receive a warning before loading sites that don\'t support it.</string>
    <string name="pref_google_safe_browsing_title">Google Safe Browsing</string>
    <string name="pref_google_safe_browsing_summary">Allow Google Safe Browsing to block harmful websites.</string>
    <string name="pref_appearance_theming_category">Theming</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_start_page_wallpaper_title">Change wallpaper</string>
    <string name="pref_use_force_dark_title">Allow web content force dark</string>
    <string name="pref_use_force_dark_summary">Match the color scheme of webpages with the browser\'s theme.</string>
    <string name="pref_appearance_ui_category">User interface</string>
    <string name="pref_show_favicon">Show favicon</string>
    <string name="pref_show_favicon_summary">Show the favicon of the webpage next to the address bar.</string>
    <string name="pref_reverse_address_bar_title">Reach mode</string>
    <string name="pref_reverse_address_bar_summary">Relocate interface elements for easier one-hand usage.</string>
    <string name="pref_enable_swipe_refresh_title">Pull to Refresh</string>
    <string name="pref_enable_swipe_refresh_summary">Enable page reloads triggered by vertically overscrolling content.</string>
    <string name="pref_update_recents_icon_title">Update icon and label of tabs in Recents</string>
    <string name="pref_update_recents_icon_summary">Automatically update the icon and label of tabs in Recents to that of the webpage.</string>
    <string name="pref_use_custom_tabs_title">Use Custom Tabs</string>
    <string name="pref_use_custom_tabs_summary">Always open external links in Custom Tabs when it is opened from another application.</string>
    <string name="pref_send_save_data_title">Data Saver</string>
    <string name="pref_send_save_data_summary">Send data saving request to supported websites.</string>
    <string name="pref_download_confirmation_ask_title">Show confirmation dialog</string>
    <string name="pref_download_confirmation_ask_summary">Ask to confirm each time whether to download a file.</string>
    <string name="pref_close_app_after_download_title">Close after downloading external links</string>
    <string name="pref_close_app_after_download_summary">Close the current tab after downloading an external link.</string>
    <string name="pref_enable_javascript_title">JavaScript</string>
    <string name="pref_enable_javascript_summary">Enabling this will allow JavaScript web content to load.</string>
    <string name="pref_remote_debugging_title">Remote debugging</string>
    <string name="pref_remote_debugging_summary">To debug in-app WebViews, connect your device to a computer running Chromium browser and navigate to chrome://inspect.</string>
    <string name="pref_development_console_logging_category">Console logging</string>
    <string name="pref_always_on_logging">Persistent logging</string>
    <string name="pref_update_channel_title">Update channel</string>
    <string name="dialog_settings_reset_to_default_message">This will clear all browser data\nAre you sure you want to continue?</string>
</resources>