<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022-2025 Tipz Team
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:summary="@string/pref_ps_category_ad_blocking_summary"
        android:title="@string/pref_ps_category_ad_blocking_title">

        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="adBlocker"
            android:summaryOn="@string/text_on"
            android:summaryOff="@string/text_off"
            app:preferenceTag="enableAdBlock"
            app:needReload="true" />
        <androidx.preference.Preference
            android:dependency="adBlocker"
            android:key="adBlockerSource"
            android:summary=""
            android:title="@string/pref_ad_blocker_source_title" />
        <androidx.preference.Preference
            android:dependency="adBlocker"
            android:key="adBlockerDownload"
            android:title="@string/pref_ad_blocker_download_hosts_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_ps_category_privacy">
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="do_not_track"
            android:summary="@string/pref_do_not_track_summary"
            android:title="@string/pref_do_not_track_title"
            app:preferenceTag="sendDNT"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="send_sec_gpc"
            android:summary="@string/pref_send_sec_gpc_summary"
            android:title="@string/pref_send_sec_gpc_title"
            app:preferenceTag="sendSecGPC"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="enable_history"
            android:summary="@string/pref_enable_history_summary"
            android:title="@string/pref_enable_history_title"
            app:preferenceTag="enableHistoryStorage"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialDialogPreference
            android:key="clear_browsing_data"
            android:title="@string/pref_clear_browsing_data"
            android:dialogTitle="@string/pref_clear_browsing_data"
            android:dialogMessage="@string/dialog_continue_prompt_message"
            android:positiveButtonText="@string/clear" />
        <tipz.viola.settings.activity.MaterialDialogPreference
            android:key="reset_to_default"
            android:summary="@string/pref_reset_to_default_summary"
            android:title="@string/pref_reset_to_default_title"
            android:dialogTitle="@string/pref_reset_to_default_title"
            android:dialogMessage="@string/dialog_settings_reset_to_default_message"
            android:positiveButtonText="@string/clear" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/pref_ps_category_security">
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="enforce_https"
            android:summary="@string/pref_enforce_https_summary"
            android:title="@string/pref_enforce_https_title"
            app:preferenceTag="enforceHttps"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="google_safe_browsing"
            android:summary="@string/pref_google_safe_browsing_summary"
            android:title="@string/pref_google_safe_browsing_title"
            app:preferenceTag="enableGoogleSafeBrowse"
            app:needReload="false" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>