<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022-2025 Tipz Team
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/pref_category_general">
        <androidx.preference.Preference
            android:key="search_engine"
            android:summary=""
            android:title="@string/search_engine" />
        <androidx.preference.Preference
            android:key="homepage"
            android:summary=""
            android:title="@string/homepage" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="dont_use_start_page"
            android:summary="@string/pref_use_web_homepage_summary"
            android:title="@string/pref_use_web_homepage_title"
            app:preferenceTag="useWebHomePage"
            app:needReload="false" />
        <androidx.preference.Preference
            android:key="search_suggestions"
            android:summary=""
            android:title="@string/search_suggestions_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_data_privacy">
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="adBlocker"
            android:summary="@string/pref_ad_blocker_summary"
            android:title="@string/pref_ad_blocker_title"
            app:preferenceTag="enableAdBlock"
            app:needReload="true" />
        <androidx.preference.Preference
            android:dependency="adBlocker"
            android:key="adBlockerSource"
            android:summary=""
            android:title="@string/pref_ad_blocker_source_title" />
        <androidx.preference.Preference
            android:dependency="adBlocker"
            android:key="adBlockerDownload"
            android:title="@string/pref_ad_blocker_download_hosts_title" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="do_not_track"
            android:summary="@string/pref_do_not_track_summary"
            android:title="@string/pref_do_not_track_title"
            app:preferenceTag="sendDNT"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="send_sec_gpc"
            android:summary="@string/pref_send_sec_gpc_summary"
            android:title="@string/pref_send_sec_gpc_title"
            app:preferenceTag="sendSecGPC"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="enforce_https"
            android:summary="@string/pref_enforce_https_summary"
            android:title="@string/pref_enforce_https_title"
            app:preferenceTag="enforceHttps"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="google_safe_browsing"
            android:summary="@string/pref_google_safe_browsing_summary"
            android:title="@string/pref_google_safe_browsing_title"
            app:preferenceTag="enableGoogleSafeBrowse"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="enable_history"
            android:summary="@string/pref_enable_history_summary"
            android:title="@string/pref_enable_history_title"
            app:preferenceTag="enableHistoryStorage"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialDialogPreference
            android:key="clear_browsing_data"
            android:title="@string/pref_clear_browsing_data"
            android:dialogTitle="@string/pref_clear_browsing_data"
            android:dialogMessage="@string/dialog_continue_prompt_message"
            android:positiveButtonText="@string/clear" />
        <tipz.viola.settings.activity.MaterialDialogPreference
            android:key="reset_to_default"
            android:summary="@string/pref_reset_to_default_summary"
            android:title="@string/pref_reset_to_default_title"
            android:dialogTitle="@string/pref_reset_to_default_title"
            android:dialogMessage="@string/dialog_settings_reset_to_default_message"
            android:positiveButtonText="@string/clear" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_visuals">
        <androidx.preference.Preference
            android:key="theme"
            android:summary=""
            android:title="@string/pref_theme_title" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="use_force_dark"
            android:summary="@string/pref_use_force_dark_summary"
            android:title="@string/pref_use_force_dark_title"
            app:preferenceTag="useForceDark" />
        <tipz.viola.settings.activity.MaterialPreference
            android:key="start_page_wallpaper"
            android:summary=""
            android:title="@string/pref_start_page_wallpaper_title"
            app:requiredApi="19" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="show_favicon"
            android:summary="@string/pref_show_favicon_summary"
            android:title="@string/pref_show_favicon"
            app:preferenceTag="showFavicon"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="reverse_address_bar"
            android:summary="@string/pref_reverse_address_bar_summary"
            android:title="@string/pref_reverse_address_bar_title"
            app:preferenceTag="reverseAddressBar"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="enable_swipe_refresh"
            android:summary="@string/pref_enable_swipe_refresh_summary"
            android:title="@string/pref_enable_swipe_refresh_title"
            app:preferenceTag="enableSwipeRefresh"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="update_recents_icon"
            android:summary="@string/pref_update_recents_icon_summary"
            android:title="@string/pref_update_recents_icon_title"
            app:preferenceTag="updateRecentsIcon"
            app:needReload="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_advanced">
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="javascript"
            android:summary="@string/pref_enable_javascript_summary"
            android:title="@string/pref_enable_javascript_title"
            app:preferenceTag="isJavaScriptEnabled"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="use_custom_tabs"
            android:summary="@string/pref_use_custom_tabs_summary"
            android:title="@string/pref_use_custom_tabs_title"
            app:preferenceTag="useCustomTabs"
            app:needReload="false" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="send_save_data"
            android:summary="@string/pref_send_save_data_summary"
            android:title="@string/pref_send_save_data_title"
            app:preferenceTag="sendSaveData"
            app:needReload="true" />
        <tipz.viola.settings.activity.MaterialSwitchPreference
            android:key="close_app_after_download"
            android:summary="@string/pref_close_app_after_download_summary"
            android:title="@string/pref_close_app_after_download_title"
            app:preferenceTag="closeAppAfterDownload"
            app:needReload="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_software_updates">
        <androidx.preference.Preference
            android:key="check_for_updates"
            android:summary="@string/pref_check_for_updates_summary"
            android:title="@string/pref_check_for_updates_title" />
        <androidx.preference.Preference
            android:key="update_channel"
            android:summary=""
            android:title="@string/pref_update_channel_title" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/pref_category_version">
        <androidx.preference.Preference
            android:key="about"
            android:summary=""
            android:title="@string/pref_about_title" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
