<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2025 Tipz Team
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <tipz.viola.settings.activity.MaterialSwitchPreference
        android:key="downloads_enablement"
        android:summaryOn="@string/text_on"
        android:summaryOff="@string/text_off"
        app:allowDividerBelow="true"
        app:preferenceTag="enableDownloads"
        app:needReload="false" />

    <tipz.viola.settings.ui.fragment.DownloadLocationPickerPreference
        android:dependency="downloads_enablement"
        android:key="download_location_default"
        app:allowDividerAbove="true" />

    <tipz.viola.settings.activity.MaterialSwitchPreference
        android:dependency="downloads_enablement"
        android:key="download_confirmation_ask"
        android:summary="@string/pref_download_confirmation_ask_summary"
        android:title="@string/pref_download_confirmation_ask_title"
        app:preferenceTag="requireDownloadConformation"
        app:needReload="false" />

    <tipz.viola.settings.activity.MaterialSwitchPreference
        android:dependency="downloads_enablement"
        android:key="close_app_after_download"
        android:summary="@string/pref_close_app_after_download_summary"
        android:title="@string/pref_close_app_after_download_title"
        app:preferenceTag="closeAppAfterDownload"
        app:needReload="false" />
</androidx.preference.PreferenceScreen>