<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2022-2025 Tipz Team
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <tipz.viola.settings.activity.MaterialSwitchPreference
        android:key="homepage_enablement"
        android:summaryOn="@string/text_on"
        android:summaryOff="@string/text_off"
        app:allowDividerBelow="true"
        app:preferenceTag="useHomePage"
        app:needReload="false" />
    <androidx.preference.Preference
        android:dependency="homepage_enablement"
        android:key="homepage"
        android:title="@string/homepage"
        app:allowDividerAbove="true" />
    <tipz.viola.settings.activity.MaterialSwitchPreference
        android:dependency="homepage_enablement"
        android:key="dont_use_start_page"
        android:summary="@string/pref_use_web_homepage_summary"
        android:title="@string/pref_use_web_homepage_title"
        app:preferenceTag="useWebHomePage"
        app:needReload="false" />
</androidx.preference.PreferenceScreen>